# cseme

./: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/elements/: drain.rs  mod.rs
core/src/traits/: concrete.rs  excavation.rs  formwork.rs  mod.rs
core/tests/: drain_tests.rs
core_tests/: Cargo.toml
core_tests/src/: lib.rs
cseme_lib/: Cargo.toml
cseme_lib/src/: lib.rs
cseme_lib/src/elements/: drain.rs  mod.rs
cseme_lib/src/tests/: drain_tests.rs  mod.rs
cseme_lib/src/traits/: concrete.rs  excavation.rs  formwork.rs
