[package]
name = "cseme_core"
version = "0.1.0"
edition = "2021"
authors = ["Chukwunwike Udezue <udezuec@protonmail.com>"]
description = "Civil and Structural Element Material Estimation Library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
approx = "0.5.1"
